# feed2epub

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compose.yaml  feeds.example.yaml  feeds.yaml  pyproject.toml
.github/workflows/: publish.yaml
deployment/: README.md
deployment/docker-compose/: README.md  compose.yaml
deployment/kubernetes/: README.md  deployment.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  pvc.yaml  secret.example.yaml  service.yaml
src/feed2epub/: __init__.py  __main__.py  config.py  epub.py  extract.py  feeds.py  grouping.py  opds.py  retention.py  serve.py
tests/: test_config.py  test_epub.py  test_extract.py  test_feeds.py  test_grouping.py  test_opds.py  test_retention.py
tests/fixtures/: article.html  sample_rss.xml
